--- a/Hillsrion.scss
+++ b/Hillsrion.scss
@@ -24,7 +24,6 @@ So mixins level 2 includes level 1 mixins in the code. When it's the case, it's 
   display: block;
   margin: 0 auto;
 }
-//Test
 
 @mixin bg-regular() {
   background-size: cover;
@@ -182,25 +181,24 @@ justify-content: space-around;
   }
 }
 
-/**
- * Mixin Level 1.
- * Desc : Sets width and height with value given in parameter.
- */
-@mixin wh-equal($value) {
-  width: $value;
-  height: $value;
-}
 
 /**
  * Mixin Level 1.
- * Desc : Sets width and height with width and height wanted values given in parameter.
+ * Desc : Sets width and height according to size parameter.
+ * You can set size as full without providing values.
+ * equal needs a value in second parameter of the mixin.
+ * different needs width in 1st parameter and height in 2nd.
  */
 
-@mixin size($full:"",$width, $height) {
-  @if $full==full {
+@mixin size($size:"",$width:"", $height:"") {
+  @if $size==full {
     width: 100%;
     height: 100%;
-  } @else {
+  } @else if $size==equal{
+    $width: $value;
+    width: $value;
+    height: $value;
+  } @else if $size==different {
     width: $width;
     height: $height;
   }
